--- a/carrito2023/index.html
+++ b/carrito2023/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carrito React 2023 : Meneses, Lucas!</title>
+    <title>Carrito React 2023 : Meneses, Lucas.</title>
   </head>
   <body>
     <div id="root"></div>
