--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M21 7H7.649l-.951-4.556C6.527 1.34 5.671 1 4.802 1H1v2h3.802l1.542 7H20V7zm0 10h-3l-1-4H8.32l-.842-2H20v2h-3.276l.674 2h-6.92l-.842-2H20v2zm-4-6h-4v-2h4v2z' /%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrito React 2023 : Meneses, Lucas.</title>
   </head>
